[gd_scene load_steps=18 format=2]

[ext_resource path="res://Actors/Enemy/DeathSoulsEffect.tscn" type="PackedScene" id=1]
[ext_resource path="res://Actors/Enemy/BleedParticles.tscn" type="PackedScene" id=2]
[ext_resource path="res://Actors/Enemy/FireParticles.tscn" type="PackedScene" id=3]
[ext_resource path="res://Actors/Enemy/PoisonParticles.tscn" type="PackedScene" id=4]
[ext_resource path="res://Actors/DamageTaker.tscn" type="PackedScene" id=5]
[ext_resource path="res://Actors/Enemy/MovementAI.gd" type="Script" id=6]
[ext_resource path="res://StateMachine/FiniteStateMachine.gd" type="Script" id=7]
[ext_resource path="res://Actors/Health.gd" type="Script" id=8]
[ext_resource path="res://Actors/Enemy/Death.gd" type="Script" id=9]
[ext_resource path="res://Actors/Enemy/DefaultEnemyStates/IdleAI.gd" type="Script" id=10]
[ext_resource path="res://BuchOpenGameArt/dungeon_sheet.png" type="Texture" id=11]
[ext_resource path="res://Actors/Enemy/DamageArea.gd" type="Script" id=12]
[ext_resource path="res://Actors/Enemy/DefaultEnemyStates/Staggered.gd" type="Script" id=13]
[ext_resource path="res://Actors/BlinkingMaterial.tres" type="Material" id=14]

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 11 )
region = Rect2( 368, 111, 16, 18 )
filter_clip = true

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 6.10052, 8.12974 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 6.57299, 8.52346 )

[node name="Enemy" type="KinematicBody2D" groups=["ENEMIES"]]
collision_layer = 8
collision_mask = 11
script = ExtResource( 6 )
DeathEffect = ExtResource( 1 )
startStatePath = NodePath("FiniteStateMachine/IdleAI")
speed = 20.0

[node name="Sprite" type="Sprite" parent="."]
material = ExtResource( 14 )
texture = SubResource( 3 )

[node name="FireParticles" parent="." instance=ExtResource( 3 )]

[node name="BleedParticles" parent="." instance=ExtResource( 2 )]

[node name="PoisonParticles" parent="." instance=ExtResource( 4 )]

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( -1.98682e-07, 1.98682e-07 )
shape = SubResource( 1 )

[node name="DamageTaker" parent="." instance=ExtResource( 5 )]

[node name="Slow" parent="DamageTaker" index="3"]
wait_time = 4.811

[node name="Health" type="Node" parent="DamageTaker"]
script = ExtResource( 8 )

[node name="DamageArea" type="Area2D" parent="."]
visible = false
collision_layer = 32
collision_mask = 2
script = ExtResource( 12 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageArea"]
shape = SubResource( 2 )

[node name="Timer" type="Timer" parent="DamageArea"]
wait_time = 2.0

[node name="Tween" type="Tween" parent="."]

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 7 )

[node name="IdleAI" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 10 )
direction = Vector2( 0, -1 )

[node name="Staggered" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 13 )
staggeredSeconds = 0.25

[node name="Death" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 9 )

[node name="DeathTween" type="Tween" parent="."]

[connection signal="OnSlowed" from="DamageTaker" to="." method="_on_DamageTaker_OnSlowed"]
[connection signal="OnSlowedStop" from="DamageTaker" to="." method="_on_DamageTaker_OnSlowedStop"]
[connection signal="bleedStarted" from="DamageTaker" to="." method="_on_DamageTaker_bleedStarted"]
[connection signal="fireStarted" from="DamageTaker" to="." method="_on_DamageTaker_fireStarted"]
[connection signal="poisonStarted" from="DamageTaker" to="." method="_on_DamageTaker_poisonStarted"]
[connection signal="timeout" from="DamageTaker/DoTFire" to="." method="_on_DoTFire_timeout"]
[connection signal="timeout" from="DamageTaker/DoTPoison" to="." method="_on_DoTPoison_timeout"]
[connection signal="timeout" from="DamageTaker/DoTBleed" to="." method="_on_DoTBleed_timeout"]
[connection signal="damageTaken" from="DamageTaker/Health" to="." method="_on_Health_damageTaken"]
[connection signal="damageTaken" from="DamageTaker/Health" to="FiniteStateMachine/IdleAI" method="_on_Health_damageTaken"]
[connection signal="healthDepleted" from="DamageTaker/Health" to="." method="_on_Health_healthDepleted"]
[connection signal="body_entered" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_entered"]
[connection signal="body_exited" from="DamageArea" to="DamageArea" method="_on_DamageArea_body_exited"]
[connection signal="timeout" from="DamageArea/Timer" to="DamageArea" method="_on_Timer_timeout"]

[editable path="DamageTaker"]
